spacing fix

--- a/theme/styles/blog.css
+++ b/theme/styles/blog.css
@@ -1,5 +1,6 @@
 p{
   margin: 0px;
+  padding: 1px 0px 15px 0px;
 }
 div.blog-container{
   padding-top: 30px;
